--- a/README.org
+++ b/README.org
@@ -1,6 +1,5 @@
-#+begin_src python :results drawer :exports results
-import export
-return export.make_parser().prog
+#+begin_src python :dir src :results drawer :exports results
+import goodrexport.export as E; return E.make_parser().prog
 #+end_src
 
 #+RESULTS:
@@ -9,13 +8,15 @@ Export/takeout for your personal Goodreads data
 :end:
 
 * Setting up
-1. =pip3 install --user -r requirements.txt=
+1. The easiest way is =pip3 install --user git+https://github.com/karlicoss/goodrexport=.
+
+   Alternatively, use =git clone --recursive=, or =git pull && git submodule update --init=. After that, you can use =pip3 install --editable=.
 2. [[https://www.goodreads.com/api/keys][get your API keys]]
 
 * Exporting
 
-#+begin_src python :results drawer :exports results 
-import export; return export.make_parser().epilog
+#+begin_src python :dir src :results drawer :exports results
+import goodrexport.export as E; return E.make_parser().epilog
 #+end_src
 
 #+RESULTS:
@@ -32,43 +33,42 @@ Usage:
 
 After that, use:
 
-: ./export.py --secrets /path/to/secrets.py
+: python3 -m goodrexport.export --secrets /path/to/secrets.py
 
 That way you type less and have control over where you keep your plaintext secrets.
 
 *Alternatively*, you can pass parameters directly, e.g.
 
-: ./export.py --user_id <user_id> --key <key>
+: python3 -m goodrexport.export --user_id <user_id> --key <key>
 
 However, this is verbose and prone to leaking your keys/tokens/passwords in shell history.
 
-    
-You can also import ~export.py~ as a module and call ~get_xml~ function directly to get raw XML.
-        
+
+You can also import ~goodrexport.export~ as a module and call ~get_xml~ function directly to get raw XML.
+
 
 I *highly* recommend checking exported files at least once just to make sure they contain everything you expect from your export. If not, please feel free to ask or raise an issue!
-    
+
 :end:
 
 * Using data
   
-#+begin_src python :results drawer :exports results 
-import dal_helper; return dal_helper.make_parser().epilog
+#+begin_src python :dir src  :results drawer :exports results
+import goodrexport.exporthelpers.dal_helper as D; return D.make_parser().epilog
 #+end_src
 
 #+RESULTS:
 :results:
 
-You can use =dal.py= (stands for "Data Access/Abstraction Layer") to access your exported data, even offline.
+You can use =goodrexport.dal= (stands for "Data Access/Abstraction Layer") to access your exported data, even offline.
 I elaborate on motivation behind it [[https://beepb00p.xyz/exports.html#dal][here]].
 
 - main usecase is to be imported as python module to allow for *programmatic access* to your data.
 
   You can find some inspiration in [[https://beepb00p.xyz/mypkg.html][=my.=]] package that I'm using as an API to all my personal data.
 
-- to test it against your export, simply run: ~./dal.py --source /path/to/export~
+- to test it against your export, simply run: ~python3 -m goodrexport.dal --source /path/to/export~
 
-- you can also try it interactively: ~./dal.py --source /path/to/export --interactive~
+- you can also try it interactively: ~python3 -m goodrexport.dal --source /path/to/export --interactive~
 
 :end:
-
